# VINS-Mo

./: .gitignore  README.md
ar_demo/: CMakeLists.txt
benchmark_publisher/: CMakeLists.txt
camera_model/: CMakeLists.txt
config/euroc/: euroc_config.yaml  real_c270i.yaml
config/realsense/: realsense_color_config.yaml
data_generator/: CMakeLists.txt
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp
pose_graph/: CMakeLists.txt
pose_graph/src/: parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: euroc.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/initial/: depth_estimator.cpp  depth_estimator.h  initial_aligment.cpp  initial_alignment.h  initial_fast_mono.cpp  initial_fast_mono.h  initial_sfm.cpp  solve_5pts.cpp
vins_estimator/src/utility/: visualization.cpp
